# playground

./: (>().py  .gitignore  123456789,abcdefghij.py  ?僧分?馒头.py  ?钱?鸡.py  cpp_extension_example.cpp  cube.py  cubes.py  example-1.py  game1.py  maze.py  oval.py  playground.code-workspace  reverse-word.py  setup.py  sky.py  star.py  untiltid.py  ❕.py  ❤️.py  做题.py  因式分解.py  密码.py  平方根.py  年月.py  彭罗斯三角.py  循环赛程.py  手动画画.py  斐波那契数列.py  最大公约数1.py  电路图.py  组合.py  统计和.py  魔术.py
cpp/: CMakeLists.txt  README.md  function_guide.md
cpp/include/bits/: stdc++.h
cpp/src/: break_time.cpp  buy_stationery.cpp  cube_number.cpp  lucky_number.cpp  main.cpp  odd_and_even.cpp  paint_brush.cpp  simple_paint.cpp  temp_convert.cpp
python/: ([)].py  0.py  1,3,5:3.py  1,3,5:5.py  123:321.py  12:21.py  all.py  c_and_a.py  cube_tree.py  extra.py  func_demo.py  game3.py  imposible_stair.py  perfect_things.py  rainbow.py  sos.py  tree.py  三角.py  三角形最小路径数字和.py  删除数字.py  压缩.py  因式分解2.py  完美数字.py  屏幕宠物.py  急速定位.py  扑克牌牌型概率.py  报数鼓掌.py  捕蛋器.py  数字分辨器.py  最大公约数2.py  楼梯.py  毛毛虫.py  皇后.py  竖式.py  陨石来袭.py  随机数2个6.py
python/x一个py/: 1.一个.py  2.一个.py  3.一个.py  7.一个.py
x一个py/: 4.一个.py  5.一个.py  6.一个.py
